[package]
name = "gaussian_blur"
version = "0.1.1"
edition = "2018"
license = "Unlicense/MIT"
readme = "README.md"
repository = "https://github.com/frogtd/gaussian_blur"
description = "Gaussian blur in linear time."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
image = "0.23.14"